# aipim

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: main.rs
api/src/api/: mod.rs
core/: Cargo.toml
core/examples/: simple.rs
core/src/: client.rs  lib.rs
core/src/provider/: anthropic.rs  google.rs  mod.rs  openai.rs
src/: client.rs  main.rs
src/fixtures/: pathology-form.json
src/provider/: anthropic.rs  mod.rs  openai.rs
