[package]
name = "aipim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
base64 = "0.22.1"
dotenv = "0.15.0"
log = "0.4.21"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
simplelog = "0.12.2"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
