[workspace]
resolver = "2"
members = [
  "core",
  "api",
]

[workspace.package]
authors = ["Felipe Coury"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Local dependencies
aipim = { version = "0.1", path = "./core" }
aipim_api = { version = "0.1", path = "./api"} 

anyhow = "1.0.86"
async-trait = "0.1.80"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }

