[package]
name = "aipim"
version = "0.1.1"
edition = "2021"
description = "AIPIM is a Rust library designed to provide a unified interface for interacting with various AI providers. It abstracts the complexities of different AI APIs, allowing developers to easily switch between providers without changing their codebase."
license = "MIT"
repository = "https://github.com/fcoury/aipim"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22.1"
log.workspace = true
reqwest = { version = "0.12.5", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0.61"
tokio.workspace = true

[dev-dependencies]
simplelog = "0.12.2"
dotenv = "0.15.0"

